--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-handlebars": "3.0",
+    "nanoid": "^3.3.4",
     "pug": "^3.0.2"
   },
   "devDependencies": {
