--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-handlebars": "3.0",
-    "nanoid": "^3.3.4",
-    "pug": "^3.0.2"
+    "nanoid": "^3.3.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
