--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node_users-express-server",
+  "name": "node_online-shop-api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -12,11 +12,16 @@
   "author": "Dawid Marek <dawid.marek95x@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.9.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "nanoid": "^3.3.4"
+    "mysql2": "^3.6.2",
+    "nanoid": "^3.3.4",
+    "sequelize": "^5.0.0-beta.11"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.22"
   }
 }
