--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.0",
+    "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.0.0",
     "mysql2": "^3.6.2",
     "nanoid": "^3.3.4",
     "sequelize": "^5.0.0-beta.11"
