--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.0",
+    "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.8",
