--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "mysql2": "^3.6.2",
