--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "express-validator": "^7.0.1",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.2",
     "nanoid": "^3.3.4",
+    "pdfkit": "^0.14.0",
     "sequelize": "^5.0.0-beta.11"
   },
   "devDependencies": {
